Added models Initial migration

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "https": {
+    "OSRShttps": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
