--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OSRSHelper": "Server=DESKTOP-9RATASU;Database=OSRSDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
